compiler/tests/should-fail/InvalidProtocolAnnotation.via
/* InvalidProtocolAnnotationError */

host alice
host b

fun main() {
    val a: int{b}@Local(host = alice) = 42;
}
